# home_work_pytest

./: pyproject.toml
test/: test_arrs.py
