[tool.poetry]
name = "home-work-pytest"
version = "0.1.0"
description = ""
authors = ["Shebelnitskiy <Shebelnitskiywork@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.1.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
